syntax = "proto3";

package Common.Proto.Entity;
import "Base/NetVector3.proto";

message NetEntity {
    int32 entity_id = 1;
    Base.NetVector3 position = 2;
    Base.NetVector3 direction = 3;
}
