syntax = "proto3";

package Common.Proto.Event.Space;
import "Entity/NetEntity.proto";

message EntityEnterRequest {
    repeated int32 entity_id = 1;
}

message EntityEnterResponse {
    repeated Entity.NetEntity entity_list = 1;
}